--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mui/x-date-pickers": "^7.16.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
